--- a/_config.yml
+++ b/_config.yml
@@ -115,7 +115,8 @@ pwa:
 paginate: 10
 
 # The base URL of your site
-baseurl: ""
+#baseurl: ""
+baseurl: "ahessmat.github.io"
 
 # ------------ The following options are not recommended to be modified ------------------
 
