Chaging the baseURL again

--- a/_config.yml
+++ b/_config.yml
@@ -116,7 +116,7 @@ paginate: 10
 
 # The base URL of your site
 #baseurl: ""
-baseurl: "/ahessmat.github.io"
+baseurl: "https://github.com/ahessmat/ahessmat.github.io"
 
 # ------------ The following options are not recommended to be modified ------------------
 
